# Attesta-Kit

./: .gitignore  Anchor.toml  CODE_QUALITY.md  Cargo.toml  DEPLOYMENT.md  INTEGRATION_GAPS.md  QUICK_FIX.md  QUICK_START.md  README.md
crates/core-crypto/: Cargo.toml  README.md
crates/core-crypto/src/: errors.rs  lib.rs  p256_verify.rs  replay.rs  webauthn.rs
crates/recovery/: Cargo.toml  README.md
crates/recovery/src/: encrypted_backup.rs  lib.rs  multi_passkey.rs  policies.rs
crates/smart-account/: Cargo.toml  README.md
crates/smart-account/src/: account.rs  auth.rs  execute.rs  lib.rs  storage.rs
demo/cli/: README.md
demo/web/src/: App.tsx  auth.ts  pay.ts
documentation/my-website/: docusaurus.config.js
documentation/my-website/blog/2021-08-26-welcome/: index.md
documentation/my-website/docs/: intro.md
documentation/my-website/docs/core-concepts/: Architecture Overview.md  Passkey Authentication.md  Policy Engine.md  Recovery and security.md  Smart Account.md
documentation/my-website/docs/developer-guides/: dapp-integration.md  quickstart.md
documentation/my-website/docs/sdk-and-integration/: error-handling-and-security.md  installation.md  javascript-typescript-sdk.md  policy-configuration.md  sdk-overview.md  transaction-and-signing.md
documentation/my-website/src/components/HomepageFeatures/: index.js
documentation/my-website/src/pages/: index.js
programs/attesta/: Cargo.toml  README.md
programs/attesta/src/: lib.rs
scripts/: README.md  build-sdk.sh  build.sh  deploy.sh  generate-idl.sh  publish-sdk.sh  test.sh
sdk/: BUNDLING.md
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  lib.rs
sdk/ts/: .npmignore  IMPLEMENTATION_NOTES.md  README.md  package.json
sdk/ts/src/: account.ts  config.ts  index.ts  instructions.ts  pay.ts  register.ts  webauthn-utils.ts  withdraw.ts
