[workspace]
members = [
    "crates/core-crypto",
    "crates/smart-account",
    "crates/recovery",
    "sdk/rust",
    "demo/cli",
]

resolver = "2"

[workspace.dependencies]
solana-program = "~1.18"
anchor-lang = "0.29"
anchor-spl = "0.29"
borsh = "1.3"
thiserror = "1.0"
p256 = "0.13"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
