[package]
name = "core-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "~1.18"
p256 = "0.13"
sha2 = "0.10"
thiserror = "1.0"
anchor-lang = "0.29"
serde = { version = "1.0", features = ["derive"] }
borsh = "1.3"

[dev-dependencies]
solana-program-test = "~1.18"

[lib]
crate-type = ["lib"]
