[package]
name = "smart-account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "~1.18"
anchor-lang = "0.29"
anchor-spl = "0.29"
borsh = "1.3"
thiserror = "1.0"
core-crypto = { path = "../core-crypto" }

[dev-dependencies]
solana-program-test = "~1.18"
anchor-client = "0.29"
