[package]
name = "attesta"
version = "0.1.0"
description = "Account abstraction protocol on Solana with passkey-based authorization"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "attesta"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.18"
borsh = "1.3"
thiserror = "1.0"
core-crypto = { path = "../../../crates/core-crypto" }
smart-account = { path = "../../../crates/smart-account" }
recovery = { path = "../../../crates/recovery" }

[dev-dependencies]
anchor-client = "0.29.0"
solana-program-test = "~1.18"
