[package]
name = "attesta-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Attesta - Account Abstraction on Solana with Passkeys"
license = "MIT"
repository = "https://github.com/attesta/attesta-solana"
keywords = ["solana", "passkey", "webauthn", "account-abstraction"]
categories = ["cryptography", "blockchain"]

[lib]
name = "attesta_sdk"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "lib"]

[dependencies]
solana-program = "~1.18"
anchor-lang = "0.29"
anchor-client = "0.29"
borsh = "1.3"
thiserror = "1.0"
core-crypto = { path = "../../crates/core-crypto" }
smart-account = { path = "../../crates/smart-account" }
recovery = { path = "../../crates/recovery" }

[dev-dependencies]
solana-program-test = "~1.18"

[features]
default = []
